@@ -1,0 +1,10 @@
+~~~
+: main
+i liliadli
+d 100
+d 200
+d 100
+i liadha..
+d -99
+~~~
+
