@@ -1,0 +1,14 @@
+~~~
+: main
+i lilian..
+d -1
+d -1
+i lilian..
+d 0
+d -1
+i lilian..
+d 0
+d 0
+i ha......
+~~~
+
