@@ -1,0 +1,12 @@
+~~~
+i liju....
+r main
+: subr
+i lire....
+d 10
+: main
+i lica....
+r subr
+i ha......
+~~~
+
