@@ -1,0 +1,14 @@
+~~~
+: main
+i lilidi..
+d 100
+d 200
+i lilidi..
+d 100
+d -99
+i lilidi..
+d 355
+d 133
+i ha......
+~~~
+
