@@ -1,0 +1,7 @@
+~~~
+i lililidr
+d 100
+d 200
+d 300
+i ha......
+~~~
