@@ -1,0 +1,6 @@
+~~~
+i lidulidu
+d 100
+d 200
+i ha......
+~~~
