@@ -1,0 +1,10 @@
+~~~
+i lilieq..
+d 100
+d 200
+i lilieq..
+d 100
+d 100
+i ha......
+~~~
+
