@@ -1,0 +1,19 @@
+~~~
+i liju....
+r main
+
+: abc
+s abc
+
+: main
+i lifelili
+r abc
+r abc
+d 1
+i adfelili
+r abc
+d 2
+i adfe....
+i ha......
+~~~
+
