@@ -1,0 +1,12 @@
+~~~
+i liligt..
+d 100
+d 200
+i liligt..
+d 100
+d 100
+i liligt..
+d 200
+d 100
+i ha......
+~~~
