@@ -1,0 +1,10 @@
+~~~
+i liju....
+r subr
+i liha....
+d 89
+
+: subr
+i liha....
+d 10
+~~~
