@@ -1,0 +1,8 @@
+~~~
+i lililili
+d 1
+d -1
+d 99
+d -99
+i ha......
+~~~
