@@ -1,0 +1,12 @@
+~~~
+i lililt..
+d 100
+d 200
+i lililt..
+d 100
+d 100
+i lililt..
+d 200
+d 100
+i ha......
+~~~
