@@ -1,0 +1,9 @@
+~~~
+i lilimu..
+d 100
+d 200
+i lilimu..
+d 100
+d -99
+i ha......
+~~~
