@@ -1,0 +1,9 @@
+~~~
+i liline..
+d 100
+d 200
+i liline..
+d 100
+d 100
+i ha......
+~~~
