@@ -1,0 +1,4 @@
+~~~
+i ........
+i ha......
+~~~
