@@ -1,0 +1,12 @@
+~~~
+i lilior..
+d -1
+d -1
+i lilior..
+d 0
+d -1
+i lilior..
+d 0
+d 0
+i ha......
+~~~
