@@ -1,0 +1,8 @@
+~~~
+i lilipuli
+d 100
+d 200
+d 300
+i po......
+i ha......
+~~~
