@@ -1,0 +1,9 @@
+~~~
+i lica....
+r subr
+i ha......
+
+: subr
+i lire....
+d 10
+~~~
