@@ -1,0 +1,9 @@
+~~~
+i lilish..
+d 455
+d -3
+i lilish..
+d 3640
+d 3
+i ha......
+~~~
