@@ -1,0 +1,20 @@
+~~~
+i liju....
+r main
+
+: abc
+s abc
+
+: main
+i lifelili
+r abc
+r abc
+d 1
+i adfelili
+d 48
+r abc
+i stlife..
+r abc
+i ha......
+~~~
+
