@@ -1,0 +1,10 @@
+~~~
+: main
+i lilisuli
+d 100
+d 200
+d 100
+i lisuha..
+d -99
+~~~
+
