@@ -1,0 +1,9 @@
+~~~
+: main
+i liliswli
+d 100
+d 200
+d 300
+i swha....
+~~~
+
