@@ -1,0 +1,18 @@
+~~~
+i liju....
+r main
+
+: c1
+i zr......
+i drlire..
+d 2
+
+: main
+i lilica..
+d 100
+r c1
+i lilica..
+d 0
+r c1
+i ha......
+~~~
