@@ -10,8 +10,8 @@
 #define CELL_MAX LLONG_MAX - 1
 #endif
 #endif
-CELL ngaImageCells = 15347;
-CELL ngaImage[] = { 1793,14730,15322,15346,202107,372,344,1023,1535,0,10,1,10,2,10,3,10,4,10,
+CELL ngaImageCells = 14949;
+CELL ngaImage[] = { 1793,14730,14924,14948,202107,372,344,1023,1535,0,10,1,10,2,10,3,10,4,10,
                        5,10,6,10,7,10,8,10,11,10,12,10,13,10,14,10,15,10,16,10,
                        17,10,18,10,19,10,20,10,21,10,22,10,23,10,24,10,25,68223234,1,2575,
                        85000450,1,656912,140,157,268505089,63,62,285281281,0,63,2063,10,101384453,0,9,10,2049,56,25,
@@ -170,7 +170,7 @@ CELL ngaImage[] = { 1793,14730,15322,15346,202107,372,344,1023,1535,0,10,1,10,2,
                        3113,2049,2095,4100,10,3096,3136,145,118,58,117,112,100,97,116,101,0,4,1793,3143,
                        15,4,8,10,1,3139,2049,2105,16,10,3124,3157,145,99,111,112,121,0,1793,3166,
                        285278725,1,33951492,268767489,1,6,10,1,3159,2049,2270,771,10,3149,3185,145,83,99,111,112,
-                       101,76,105,115,116,0,15172,15224,10,3172,3194,145,123,123,0,2049,1570,2,1,3185,
+                       101,76,105,115,116,0,14774,14826,10,3172,3194,145,123,123,0,2049,1570,2,1,3185,
                        2049,59,16,10,3188,3219,145,45,45,45,114,101,118,101,97,108,45,45,45,0,
                        2049,1570,1,3185,2049,2921,16,10,3203,3233,145,125,125,0,1,3185,2049,56,4,15,
                        11,1793,3247,3841,3185,4097,2,10,1,3242,1793,3273,3841,3185,1793,3268,1,2,983567,1,
@@ -189,7 +189,7 @@ CELL ngaImage[] = { 1793,14730,15322,15346,202107,372,344,1023,1535,0,10,1,10,2,
                        2095,4097,3296,10,3464,3518,133,84,101,109,112,83,116,114,105,110,103,115,0,32,
                        3503,3536,133,84,101,109,112,83,116,114,105,110,103,77,97,120,0,512,3519,3548,
                        145,83,84,82,73,78,71,83,0,2049,1543,3841,3518,3841,3536,19,18,10,3537,3568,
-                       133,67,117,114,114,101,110,116,0,20,10,3557,3583,145,115,58,112,111,105,110,
+                       133,67,117,114,114,101,110,116,0,0,10,3557,3583,145,115,58,112,111,105,110,
                        116,101,114,0,3841,3568,3841,3536,19,2049,3548,17,10,3570,3602,145,115,58,110,101,
                        120,116,0,1,3568,2049,3019,3841,3568,3841,3518,11,1793,3618,1,0,4097,3568,10,1,
                        3613,9,10,3537,3632,145,115,58,116,101,109,112,0,2,2049,81,2049,2921,2049,3583,
@@ -758,24 +758,4 @@ CELL ngaImage[] = { 1793,14730,15322,15346,202107,372,344,1023,1535,0,10,1,10,2,
                        98,101,103,105,110,110,105,110,103,45,119,105,116,104,0,2049,1871,2049,4678,1793,
                        14905,2049,163,2049,14845,10,1,14900,2049,7528,10,14868,14921,145,115,58,115,112,108,105,
                        116,0,2049,6143,10,14910,14945,145,115,58,115,112,108,105,116,45,111,110,45,115,
-                       116,114,105,110,103,0,2049,6175,10,14924,14959,145,100,58,119,111,114,100,115,0,
-                       1793,14968,2049,163,2049,9379,2049,9353,10,1,14961,2049,7528,10,14948,14989,145,100,58,119,
-                       111,114,100,115,45,119,105,116,104,0,2049,1871,2049,4678,1793,15020,2049,163,2,2049,
-                       1871,2049,4192,1793,15009,2049,9379,2049,9353,10,1,15004,1793,15015,3,10,1,15013,2049,64,
-                       10,1,14995,2049,7528,10,14973,15044,145,100,105,115,112,108,97,121,45,105,102,45,
-                       108,101,102,116,0,2,2049,1871,2049,4628,1793,15056,2049,9379,2049,9353,10,1,15051,1793,
-                       15062,3,10,1,15060,2049,64,10,14973,15093,145,100,58,119,111,114,100,115,45,98,
-                       101,103,105,110,110,105,110,103,45,119,105,116,104,0,2049,1871,2049,4678,1793,15104,
-                       2049,163,2049,15044,10,1,15099,2049,7528,10,15067,15120,145,115,58,115,112,108,105,116,
-                       0,2049,6143,10,15109,15144,145,115,58,115,112,108,105,116,45,111,110,45,115,116,
-                       114,105,110,103,0,2049,6175,10,15123,15158,145,100,58,119,111,114,100,115,0,1793,
-                       15167,2049,163,2049,9379,2049,9353,10,1,15160,2049,7528,10,15147,15188,145,100,58,119,111,
-                       114,100,115,45,119,105,116,104,0,2049,1871,2049,4678,1793,15219,2049,163,2,2049,1871,
-                       2049,4192,1793,15208,2049,9379,2049,9353,10,1,15203,1793,15214,3,10,1,15212,2049,64,10,
-                       1,15194,2049,7528,10,15172,15243,145,100,105,115,112,108,97,121,45,105,102,45,108,
-                       101,102,116,0,2,2049,1871,2049,4628,1793,15255,2049,9379,2049,9353,10,1,15250,1793,15261,
-                       3,10,1,15259,2049,64,10,15172,15292,145,100,58,119,111,114,100,115,45,98,101,
-                       103,105,110,110,105,110,103,45,119,105,116,104,0,2049,1871,2049,4678,1793,15303,2049,
-                       163,2049,15243,10,1,15298,2049,7528,10,15266,15319,145,115,58,115,112,108,105,116,0,
-                       2049,6143,10,15308,15343,145,115,58,115,112,108,105,116,45,111,110,45,115,116,114,
-                       105,110,103,0,2049,6175,10,0 };
+                       116,114,105,110,103,0,2049,6175,10,0 };
